[gd_scene load_steps=5 format=3 uid="uid://6klfd7ei6yi6"]

[ext_resource type="Script" path="res://scenes/UI/user_interface.gd" id="1_2demh"]
[ext_resource type="PackedScene" uid="uid://cskrw3gnt8rgi" path="res://scenes/UI/level_completed.tscn" id="2_76df5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncq7c"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnm45"]
bg_color = Color(1, 0, 0, 1)

[node name="User Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2demh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HealthBar_1" type="ProgressBar" parent="PanelContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_ncq7c")
value = 37.0

[node name="Label" type="Label" parent="PanelContainer/Panel/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "07"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar_2" type="ProgressBar" parent="PanelContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_dnm45")
value = 61.0
fill_mode = 1

[node name="AnnouncementLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -10.0
offset_right = 96.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00291, 1)
text = "Announcement Message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timers" type="Node" parent="."]

[node name="Ready" type="Timer" parent="Timers"]
one_shot = true

[node name="Fight" type="Timer" parent="Timers"]
one_shot = true

[node name="Game" type="Timer" parent="Timers"]
one_shot = true

[node name="GameEnd" type="Timer" parent="Timers"]
wait_time = 99.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("2_76df5")]
visible = false

[connection signal="timeout" from="Timers/Ready" to="." method="_on_ready_timeout"]
[connection signal="timeout" from="Timers/Fight" to="." method="_on_fight_timeout"]
[connection signal="timeout" from="Timers/Game" to="." method="_on_game_timeout"]
[connection signal="timeout" from="Timers/GameEnd" to="." method="_on_game_end_timeout"]
